# rauc-hawkbit-example

./: .gitignore  Doxyfile  README.md
client/: CMakeLists.txt  build.sh
client/include/: hawkbit_client.h  http_client.h
client/src/: hawkbit_client.cpp  http_client.cpp  main.cpp
docs/: PRD.md
server/: main.py  pyproject.toml
